introdução ao HTML e CSS

--- a/introducaoHTMLeCSS/html-css/index.htm
+++ b/introducaoHTMLeCSS/html-css/index.htm
@@ -10,7 +10,10 @@
 </head>
 <body>
 
-	<header></header>
+	<header>
+		<h1>Home</h1>
+		<h1>Sobre Mmin</h1>
+	</header>
 	<main class="apresentacao">
 			<section class="apresentacao_conteudo">
 			<h1 class="apresentacao_conteudo_titulo">Eleve seu negocio digital
@@ -25,9 +28,11 @@
 			</p>
 			<!--Botão-->
 			<div class="apresentacao_links">
+				<h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
 				<a class="bottom-link" href="https://www.instagram.com/wasselucas/">Instragram</a>
 				<a class="bottom-link" href="https://github.com/WasseLucas">Github</a>		
 			</div>
+			<!---->
 		</section>
 		<img src="OSM-dev-top-updated-img.png" alt="dev">
 	</main>	
